Revert r826429, the work at https://issues.apache.org/jira/browse/OFBIZ-2938 was not good enough to be committed. Notably issues with data model changes as noticed by Scott. See http://markmail.org/thread/vzcj3oaevvxyvek7 for more
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@826964 13f79535-47bb-0310-9956-ffa450edef68

--- a/applications/humanres/widget/forms/EmployeeForms.xml
+++ b/applications/humanres/widget/forms/EmployeeForms.xml
@@ -185,25 +185,14 @@
         <field name="submitButton" title="${uiLabelMap.CommonCreate}" widget-style="smallSubmit"><submit button-type="button"/></field>
     </form>
     <form name="AddEmplLeave" type="single" target="createEmplLeave">
-        <auto-fields-service service-name="updateEmplLeave" map-name="leaveApp"/>
+        <auto-fields-service service-name="createEmplLeave"/>
         <field name="partyId"><hidden/></field>
-        <field name="leaveApplicationId" use-when="leaveApp!=null"><display/></field>
-        <field name="leaveApplicationId" use-when="leaveApp==null&amp;&amp;leaveApplicationId==null"><ignored/></field>
-        <field name="leaveTypeId" tooltip="${uiLabelMap.CommonRequired}">
+        <field name="leaveTypeId">
             <drop-down allow-empty="true">
                 <entity-options description="${description}" key-field-name="leaveTypeId" entity-name="EmplLeaveType"/>
             </drop-down>
         </field>
-        <field name="reasonTypeId">
-            <drop-down allow-empty="true">
-                <entity-options description="${description}" key-field-name="reasonTypeId" entity-name="EmplLeaveReasonType"/>
-            </drop-down>
-        </field>
-        <field name="fromDate" tooltip="${uiLabelMap.CommonRequired}"><date-time type="timestamp"></date-time></field>
-         <field name="thruDate" tooltip="${uiLabelMap.CommonRequired}"><date-time type="timestamp"></date-time></field>
-        <field name="approvalStatus"><hidden value="LEAVE_CREATED"/></field>
-        <field name="approverId" tooltip="${uiLabelMap.CommonRequired}"><lookup target-form-name="LookupPartyName"/></field>
-        <field name="submitButton" title="${uiLabelMap.CommonCreate}">widget-style="smallSubmit"><submit button-type="button"/></field>
+        <field name="submitButton" title="${uiLabelMap.CommonCreate}" widget-style="smallSubmit"><submit button-type="button"/></field>
     </form>
     <form name="ListEmplLeaves" type="list" list-name="listIt" separate-columns="true" target="updateEmplLeave" paginate-target="FindEmplLeaves"
         odd-row-style="alternate-row" header-row-style="header-row-2" default-table-style="basic-table hover-bar">
@@ -214,14 +203,10 @@
             </entity-condition>
         </actions>
         <auto-fields-service service-name="updateEmplLeave"/>
-        <field name="leaveApplicationId"><display/></field>
         <field name="partyId"><hidden/></field>
-        <field name="approverId"><lookup target-form-name="LookupPartyName"/></field>
-        <field name="approvalStatus"><display/></field>
-        <field name="reasonTypeId"><display/></field>
         <field name="leaveTypeId"><display-entity description="${description}" entity-name="EmplLeaveType"/></field>
-        <field name="fromDate"></field>
-        <field name="submitButton" title="${uiLabelMap.CommonUpdate}"><submit button-type="button"/></field>
+        <field name="fromDate"><display/></field>
+        <field name="submitButton" title="${uiLabelMap.CommonSubmit}" widget-style="smallSubmit"><submit/></field>
     </form>
     <form name="CurrentEmploymentData" default-map-name="employmentData" type="single">
         <field name="company" entry-name="employment.partyIdFrom">
