--- a/applications/humanres/widget/forms/EmplLeaveForms.xml
+++ b/applications/humanres/widget/forms/EmplLeaveForms.xml
@@ -23,161 +23,72 @@
     <form name="FindEmplLeaves" type="single" target="FindEmplLeaves"
         odd-row-style="header-row" default-table-style="basic-table">
         <auto-fields-entity entity-name="EmplLeave" default-field-type="find"/>
-        <field name="leaveApplicationId"><lookup target-form-name="LookupLeaveApp"/></field>
         <field name="partyId" title="${uiLabelMap.PartyPartyId}"><lookup target-form-name="LookupPartyName"/></field>
         <field name="leaveTypeId">
             <drop-down allow-empty="true">
                 <entity-options description="${description}" key-field-name="leaveTypeId" entity-name="EmplLeaveType"/>
             </drop-down>
         </field>
-        <field name="reasonTypeId">
-            <drop-down allow-empty="true">
-                <entity-options description="${description}" key-field-name="reasonTypeId" entity-name="EmplLeaveReasonType"/>
-            </drop-down>
-        </field>
-        <field name="approvalStatus">
-            <drop-down allow-empty="true">
-                <entity-options description="${description}" key-field-name="statusId" entity-name="StatusItem">
-                    <entity-constraint name="statusTypeId" operator="equals" value="LEAVE_STATUS"/>
-                    <entity-order-by field-name="description"/>
-                </entity-options>
-            </drop-down>
-        </field>
-        <field name="approverId" title="${uiLabelMap.PartyApproverId}"><lookup target-form-name="LookupPartyName"/></field>
-        <field name="description"><hidden/></field>
         <field name="noConditionFind"><hidden value="Y"/><!-- if this isn't there then with all fields empty no query will be done --></field>
         <field name="searchButton" widget-style="smallSubmit"><submit button-type="button"/></field>
     </form>
-    <form name="ListEmplLeaves" list-name="listIt" type="list" odd-row-style="alternate-row" header-row-style="header-row-2" 
-        paginate-target="FindEmplLeaves" default-table-style="basic-table hover-bar">
+    <form name="ListEmplLeaves" type="multi" use-row-submit="true" separate-columns="true" target="updateEmplLeaveExt?partyId=${partyId}" list-name="listIt" paginate-target="FindEmplLeaves"
+        odd-row-style="alternate-row" header-row-style="header-row-2" default-table-style="basic-table hover-bar">
         <actions>
-            <set field="entityName" value="EmplLeave"/>
             <service service-name="performFind" result-map="result" result-map-list="listIt">
                 <field-map field-name="inputFields" from-field="parameters"/>
-                <field-map field-name="entityName" from-field="entityName"/>
+                <field-map field-name="entityName" value="EmplLeave"/>
+                <field-map field-name="orderBy" value="fromDate"/>
                 <field-map field-name="viewIndex" from-field="viewIndex"/>
                 <field-map field-name="viewSize" from-field="viewSize"/>
             </service>
+            <set field="insideEmployee" from-field="parameters.insideEmployee"/>
         </actions>
-        <auto-fields-entity entity-name="EmplLeave" default-field-type="display"/>
-        <field name="leaveApplicationId" widget-style="buttontext">
-            <hyperlink target="EditEmplLeaves" description="${leaveApplicationId}">
-                <parameter param-name="leaveApplicationId"/>
-            </hyperlink>
-        </field>
-        <field name="partyId" field-name="partyId">
-            <display-entity entity-name="PartyNameView" description="${firstName} ${lastName}">
-                <sub-hyperlink target="/partymgr/control/viewprofile" target-type="inter-app" description="${partyId}" link-style="buttontext">
-                    <parameter param-name="partyId" from-field="partyId"/>
-                </sub-hyperlink>
-            </display-entity>
-        </field>
-        <field name="approverId" field-name="partyId">
-            <display-entity entity-name="PartyNameView" description="${firstName} ${lastName}">
-                <sub-hyperlink target="/partymgr/control/viewprofile" target-type="inter-app" description="${approverId}" link-style="buttontext">
-                    <parameter param-name="approverId" from-field="approverId"/>
-                </sub-hyperlink>
-            </display-entity>
-        </field>
-        <field name="approvalStatus"><display/></field>
-         <field name="deleteLink" title="${uiLabelMap.CommonDelete}" widget-style="buttontext" use-when="hasAdminPermission">
-            <hyperlink also-hidden="false" description="${uiLabelMap.CommonDelete}" target="deleteEmplLeave"> 
-                <parameter param-name="leaveApplicationId"/> 
-            </hyperlink>
-        </field>
-        <field name="description"><hidden/></field>
-      </form>
-    <form name="EditEmplLeave" type="single" target="updateEmplLeaveExt" default-map-name="leaveApp"
+        <alt-target use-when="insideEmployee==null" target="updateEmplLeave"/>
+        <auto-fields-service service-name="updateEmplLeave"/>
+        <field name="partyId"><display/></field>
+        <field name="leaveTypeId"><display/></field>
+        <field name="fromDate"><display/></field>
+        <field name="_rowSubmit" title="${uiLabelMap.CommonSelect}"><hidden value="Y"/></field>
+        <field name="submitButton" title="${uiLabelMap.CommonSubmit}" widget-style="smallSubmit"><submit/></field>
+    </form>
+    <form name="AddEmplLeave" type="single" target="createEmplLeave"
         header-row-style="header-row" default-table-style="basic-table">
-        <alt-target use-when="leaveApp==null" target="createEmplLeaveExt"/>
-        <auto-fields-service service-name="updateEmplLeave" map-name="leaveApp"/>
-        <field name="leaveApplicationId" use-when="leaveApp!=null"><display/></field>
-        <field name="leaveApplicationId" use-when="leaveApp==null&amp;&amp;leaveApplicationId==null"><ignored/></field>
-        <field name="partyId" tooltip="${uiLabelMap.CommonRequired}"><lookup target-form-name="LookupPartyName"/></field>
-        <field name="approverId" tooltip="${uiLabelMap.CommonRequired}"><lookup target-form-name="LookupPartyName"/></field>
-        <field name="leaveTypeId" tooltip="${uiLabelMap.CommonRequired}">
+        <actions>
+            <set field="insideEmployee" from-field="parameters.insideEmployee"/>
+        </actions>
+        <alt-target use-when="insideEmployee != null" target="createEmplLeaveExt"/>
+        <auto-fields-service service-name="createEmplLeave"/>
+        <field name="partyId" use-when="emplLeaveCtx!=null"><hidden/></field>
+        <field name="partyId" use-when="emplLeaveCtx==null"><lookup target-form-name="LookupPartyName"/></field>
+        <field name="leaveTypeId">
             <drop-down allow-empty="true">
                 <entity-options description="${description}" key-field-name="leaveTypeId" entity-name="EmplLeaveType"/>
             </drop-down>
         </field>
-        <field name="reasonTypeId">
-            <drop-down allow-empty="true">
-                <entity-options description="${description}" key-field-name="reasonTypeId" entity-name="EmplLeaveReasonType"/>
-            </drop-down>
-        </field>
-        <field name="fromDate" tooltip="${uiLabelMap.CommonRequired}"><date-time type="timestamp"></date-time></field>
-        <field name="thruDate" tooltip="${uiLabelMap.CommonRequired}"><date-time type="timestamp"></date-time></field>
-        <field name="approvalStatus"><hidden value="LEAVE_CREATED"/></field>
-        <field name="submitButton" use-when="leaveApp==null" title="${uiLabelMap.CommonCreate}" widget-style="smallSubmit"><submit button-type="button"/></field>
-        <field name="submitButton" use-when="leaveApp!=null" title="Update" widget-style="smallSubmit"><submit button-type="button"/></field>
+        <field name="submitButton" title="${uiLabelMap.CommonCreate}" widget-style="smallSubmit"><submit button-type="button"/></field>
     </form>
-    <form name="FindLeaveApprovals" target="FindLeaveApprovals" type="single">
-        <auto-fields-entity entity-name="EmplLeave" default-field-type="find"/>
-        <field name="noConditionFind"><hidden value="Y"/></field>
-        <field name="leaveApplicationId"><lookup target-form-name="LookupLeaveApp"/></field>
-        <field name="approverId" use-when="!hasAdminPermission"><hidden value="${approverId}"/></field>
-        <field name="partyId"><lookup target-form-name="LookupPartyName"/></field>
-        <field name="approvalStatus" title="${uiLabelMap.HumanResLeaveStatus} ${uiLabelMap.CommonStatus}">
-            <drop-down allow-empty="true">
-                <entity-options description="${description}" key-field-name="statusId" entity-name="StatusItem">
-                    <entity-constraint name="statusTypeId" operator="equals" value="LEAVE_STATUS"/>
-                    <entity-order-by field-name="description"/>
-                </entity-options>
-            </drop-down>
-        </field>
-        <field name="description"><hidden/></field>
-        <field name="searchButton" widget-style="smallSubmit"><submit button-type="button"/></field>
-    </form>
-    <form name="ListLeaveApprovals" list-name="listIt" type="list" odd-row-style="alternate-row" header-row-style="header-row-2" default-table-style="basic-table hover-bar">
+    <form name="ListEmplLeaveTypes" type="multi" title="" target="updateEmplLeaveType"
+        odd-row-style="alternate-row" header-row-style="header-row-2" default-table-style="basic-table hover-bar">
         <actions>
-            <set field="entityName" value="EmplLeave"/>
-            <service service-name="performFind" result-map="result" result-map-list="listIt">
-                <field-map field-name="inputFields" from-field="parameters"/>
-                <field-map field-name="entityName" from-field="entityName"/>
-            </service>
+            <entity-condition entity-name="EmplLeaveType"><order-by field-name="leaveTypeId"/></entity-condition>
         </actions>
-        <auto-fields-entity entity-name="EmplLeave" default-field-type="display"/>
-        <field name="partyId" field-name="partyId">
-            <display-entity entity-name="PartyNameView" description="${firstName} ${lastName}">
-                <sub-hyperlink target="/partymgr/control/viewprofile" target-type="inter-app" description="${partyId}" link-style="buttontext">
-                    <parameter param-name="partyId" from-field="partyId"/>
-                </sub-hyperlink>
-            </display-entity>
-        </field>
-        <field name="approverId" field-name="partyId">
-            <display-entity entity-name="PartyNameView" description="${firstName} ${lastName}">
-                <sub-hyperlink target="/partymgr/control/viewprofile" target-type="inter-app" description="${approverId}" link-style="buttontext">
-                    <parameter param-name="approverId" from-field="approverId"/>
-                </sub-hyperlink>
-            </display-entity>
-        </field>
-        <field name="approvalStatus"><display/></field>
-        <field name="UpdateStatus" title="${uiLabelMap.CommonUpdate}" widget-style="buttontext">
-            <hyperlink target="EditLeaveApprovalStatus" description="${uiLabelMap.CommonUpdate}" > 
-                <parameter param-name="leaveApplicationId"/> 
+        <auto-fields-service service-name="updateEmplLeaveType" default-field-type="hidden"/>
+        <field name="leaveTypeId"><display/></field>
+        <field name="description" title="${uiLabelMap.CommonDescription}"><text/></field>
+        <field name="deleteLink" title="${uiLabelMap.CommonDelete}" widget-style="buttontext">
+            <hyperlink target="deleteEmplLeaveType" description="${uiLabelMap.CommonDelete}" also-hidden="false">
+                <parameter param-name="leaveTypeId"/>
             </hyperlink>
         </field>
+        <field name="_rowSubmit" title="${uiLabelMap.CommonSelect}"><hidden value="Y"/></field>
+        <field name="submitButton" title="${uiLabelMap.CommonSubmit}" widget-style="smallSubmit"><submit/></field>
     </form>
-    <form name="EditLeaveApprovalStatus" type="single" target="updateLeaveApprovalStatus" default-map-name="leaveApp">
-        <auto-fields-service service-name="updateLeaveApprovalStatus" map-name="leaveApp"/>
-        <field name="leaveApplicationId" tooltip="${uiLabelMap.CommonNotModifRecreat}"><display/></field>
-        <field name="leaveApplicationId"><display/></field>
-        <field name="partyId"><display/></field>
-        <field name="approverId"><display/></field>
-        <field name="leaveTypeId"><display/></field>
-        <field name="reasonTypeId"><display/></field>
-        <field name="fromDate"><display/></field>
-        <field name="thruDate"><display/></field>
-        <field name="description"><display/></field>
-        <field name="approvalStatus" title="${uiLabelMap.HumanResLeaveStatus} ${uiLabelMap.CommonStatus}">
-            <drop-down allow-empty="false">
-                <entity-options description="${description}" key-field-name="statusId" entity-name="StatusItem">
-                    <entity-constraint name="statusTypeId" operator="equals" value="LEAVE_STATUS"/>
-                    <entity-order-by field-name="description"/>
-                </entity-options>
-            </drop-down>
-        </field>
-        <field name="approvalStatus" use-when="leaveApp!=null&amp;&amp;leaveApp.getString(&quot;approvalStatus&quot;).equals(&quot;LEAVE_REJECTED&quot;)"><display></display></field>
-        <field name="submitButton" title="Update" widget-style="smallSubmit"><submit button-type="button"/></field>
+    <form name="AddEmplLeaveType" type="single" target="createEmplLeaveType" default-map-name="emplLeaveType"
+        header-row-style="header-row" default-table-style="basic-table">
+        <auto-fields-service service-name="createEmplLeaveType" default-field-type="hidden"/>
+        <field name="leaveTypeId"><text/></field>
+        <field name="description" title="${uiLabelMap.CommonDescription}" tooltip="${uiLabelMap.CommonRequired}" widget-style="required"><text/></field>
+        <field name="submitButton" title="${uiLabelMap.CommonCreate}" widget-style="buttontext"><submit button-type="text-link"/></field>
     </form>
 </forms>
