Added a new CSS class "page-title" intended to be used for the page title in the main content area of the page. Patch provided by Bruno Busco, https://issues.apache.org/jira/browse/OFBIZ-3044 with a minor modification by me.
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@828882 13f79535-47bb-0310-9956-ffa450edef68

--- a/themes/bizznesstime/webapp/bizznesstime/css/style.css
+++ b/themes/bizznesstime/webapp/bizznesstime/css/style.css
@@ -1213,6 +1213,15 @@ div.simple-right-half {
     text-align: right;
 }
 
+.page-title {
+    color:#333333;
+    font-size:2em;
+    font-weight:700;
+    clear:both;
+    display:inline-block;
+    margin:5px 0 10px;
+}
+
 /***********************************************
 Screens (legacy style)
 ***********************************************/
