Implemented OFBIZ-3086 in Bluelight theme Add a CSS class to allow styling help links. Then each theme can style the help link.
Thank you Scott for providing the link to http://www.fatcow.com/free-icons/index.bml

I hope we will have soon several of them into OFBiz

git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@830789 13f79535-47bb-0310-9956-ffa450edef68

--- a/themes/bluelight/webapp/bluelight/style.css
+++ b/themes/bluelight/webapp/bluelight/style.css
@@ -1044,6 +1044,14 @@ ul#preferences-menu a:hover {
     color: #5CA3D7;
 }
 
+ul#preferences-menu li a.help-link {
+display:block;
+height: 12px;
+width:10px;
+background: url(/bluelight/help.png) no-repeat;
+text-indent:2000px;
+}
+
 /* ========================================= */
 /* ===== Footer Styles ===================== */
 /* ========================================= */
