Underlined some of the links, so they are noticeable. Related to https://issues.apache.org/jira/browse/OFBIZ-3061
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@831159 13f79535-47bb-0310-9956-ffa450edef68

--- a/themes/bizznesstime/webapp/bizznesstime/css/style.css
+++ b/themes/bizznesstime/webapp/bizznesstime/css/style.css
@@ -991,6 +991,14 @@ a.linktext:hover {
     color: #1c334d;
 }
 
+.basic-table td a {
+    text-decoration: underline;
+}
+
+.basic-table td a.buttontext  {
+    text-decoration: none;
+}
+
 .buttontextdisabled {
     color: #ccc;
 }
