--- a/themes/bizznesstime/webapp/bizznesstime/css/legacy.css
+++ b/themes/bizznesstime/webapp/bizznesstime/css/legacy.css
@@ -714,20 +714,21 @@ Legacy Forms
 }
 
 .fieldgroup-title-bar ul .collapsed {
-	background: url(/images/expand.gif) no-repeat center center;
+	background: url(/images/expand.gif) no-repeat left center;
 	min-height: 1.1em;
 	min-width: 1.1em;
 }
 
 .fieldgroup-title-bar ul .expanded {
-	background: url(/images/collapse.gif) no-repeat center center;
+	background: url(/images/collapse.gif) no-repeat left center;
 	min-height: 1.1em;
 	min-width: 1.1em;
 }
 
-.fieldgroup-title-bar td.collapse {
-	width: 1.1em;
-	cursor: default;
+.fieldgroup-title-bar a {
+cursor:pointer;
+text-decoration:none;
+padding-left: 10px;
 }
 
 /***********************************************
