A patch from Bruno Busco "The icon used for accessing the lookups should be defined by the theme" (https://issues.apache.org/jira/browse/OFBIZ-3176) - OFBIZ-3176 In this patch the lookup field renderer has the link image not as a static img field but specified by the theme through a style class.
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@833937 13f79535-47bb-0310-9956-ffa450edef68

--- a/themes/bizznesstime/webapp/bizznesstime/css/legacy.css
+++ b/themes/bizznesstime/webapp/bizznesstime/css/legacy.css
@@ -487,8 +487,16 @@ form .basic-table,
 /***********************************************
 Calendar
 ***********************************************/
-.field-lookup {
-	background: url(/images/fieldlookup.gif) no-repeat;
+.field-lookup ul li {
+float: left;
+}
+
+.field-lookup ul li a{
+background: url(/images/fieldlookup.gif) no-repeat 0 0;
+display: block;
+margin: 3px 10px 0px 4px;
+width:16px;
+height:16px;
 }
 
 .view-calendar {
