Fixed rendering of the new "field-lookup" class in bizznesstime. Thank you Deepak Dixit for reporting and providing the solution in the ML.
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@834001 13f79535-47bb-0310-9956-ffa450edef68

--- a/themes/bizznesstime/webapp/bizznesstime/css/legacy.css
+++ b/themes/bizznesstime/webapp/bizznesstime/css/legacy.css
@@ -487,8 +487,12 @@ form .basic-table,
 /***********************************************
 Calendar
 ***********************************************/
+.field-lookup ul {
+margin:0;
+}
 .field-lookup ul li {
 float: left;
+margin:0;
 }
 
 .field-lookup ul li a{
