Fixed OFBIZ-3199 Bullet are not rendered in HELP with dropping crumbs theme Thank you Jacques for reporting.
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@836185 13f79535-47bb-0310-9956-ffa450edef68

--- a/themes/droppingcrumbs/webapp/droppingcrumbs/css/help.css
+++ b/themes/droppingcrumbs/webapp/droppingcrumbs/css/help.css
@@ -18,22 +18,22 @@ specific language governing permissions and limitations
 under the License.
 ***********************************************/
 body {
-    background:none;
-    font-size=105%;
+background:none;
+font-size=105%;
 }
 
 .left-border {
-    float:left;
-    width:20em;
+float:left;
+width:20em;
 }
 
 div.contentarea {
-    margin: 10px 0 0 0.5em;
-    padding:0 0 0 0.5em;
+margin: 10px 0 0 0.5em;
+padding:0 0 0 0.5em;
 }
 .leftonly {
-    float:none;
-    min-height:25em;
+float:none;
+min-height:25em;
 }
 
 #column-container .leftonly {
@@ -48,4 +48,14 @@ border: none;
 #content-main-section h1,
 #content-main-section .h1 {
 display: block;
+}
+
+ol.numbers {
+list-style: decimal; 
+padding-left: 20px;
+}
+
+ul.dots {
+list-style: circle; 
+padding-left: 20px;
 }
