--- a/themes/bluelight/webapp/bluelight/style.css
+++ b/themes/bluelight/webapp/bluelight/style.css
@@ -1418,18 +1418,12 @@ margin: 0 1em 1em 0;
 /* tab-bar decorator intended to be used at
 the top of the main content area */
 .tab-bar {
-    margin-left:7px;
-    margin-right:7px;
-    padding-left: 10px;
-    padding-bottom:5px;
-    background-color: #FFFFFF;
+    display: table;
 }
 
 .tab-bar ul li {
-    float: left;
     background-color: #0366b0;
     margin: 0;
-    padding: 0.1em 0.4em 0.1em 0.4em;
 }
 
 .tab-bar ul a,.tab-bar ul a:visited {
