Better tab-bar rendering in Dropping crumbs theme. This works almost everywhere and is a CSS-only solution for OFBIZ-3206
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@880762 13f79535-47bb-0310-9956-ffa450edef68

--- a/themes/droppingcrumbs/webapp/droppingcrumbs/css/style.css
+++ b/themes/droppingcrumbs/webapp/droppingcrumbs/css/style.css
@@ -1367,11 +1367,14 @@ the top of the main content area */
 background-color: #0099CC;
 padding:5px 10px 0px 10px;
 font-size:1.1em;
+margin: -7px -12px 10px -12px;
+height:19px;
 }
 
 .tab-bar ul li {
 margin: 0 5px 0 5px;
 float:left;
+padding:0;
 }
 
 .tab-bar ul a,.tab-bar ul a:visited {
