Better rendering of screenlet title bars in Dropping Crumbs theme
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@884035 13f79535-47bb-0310-9956-ffa450edef68

--- a/themes/droppingcrumbs/webapp/droppingcrumbs/css/style.css
+++ b/themes/droppingcrumbs/webapp/droppingcrumbs/css/style.css
@@ -1134,6 +1134,8 @@ background-color:#EEEEEE;
 background-color:#0099CC;
 height: 1%; /* IE fix */
 min-height: 1.5em;
+padding-top: 1px;
+padding-bottom: 2px;
 }
 
 .screenlet-title-bar .h1,
