--- a/themes/bizznesstime/webapp/bizznesstime/css/style.css
+++ b/themes/bizznesstime/webapp/bizznesstime/css/style.css
@@ -121,7 +121,7 @@ Tables
 ***********************************************/
 table {border-collapse: collapse; border-spacing: 0; margin: 0 0 1.5em;}
 caption {text-align: left;}
-th, td {padding: .25em .5em; color:#555;}
+th, td {padding: .25em .5em; color:#555; vertical-align:middle;}
 tbody td, tbody th {}
 tfoot {font-style: italic;}
 
